@@ -248,6 +248,9 @@ namespace themonospot_Gui_Main {
 
 			AudioTreeView.Model = informations;
 
+			if (baseObject.autoReport)
+				SaveReport(filename + ".report");
+				
 			return;			
 		}
 
@@ -360,71 +363,76 @@ namespace themonospot_Gui_Main {
 				
 				// Manage result of dialog box
 				FileBox.Icon = Gdk.Pixbuf.LoadFromResource("monoSPOT.png");
+				FileBox.SetCurrentFolder(baseObject.defaultPath);
 				int retFileBox = FileBox.Run();
 				
 				if ((ResponseType)retFileBox == Gtk.ResponseType.Accept)
-				{	
-		    		// Save File
-		    		DateTime Oggi = DateTime.Now; 
-		    		StreamWriter outputStream = new StreamWriter(FileBox.Filename , false);
-		    		outputStream.WriteLine(("File:").PadRight(25)+ Path.GetFileName(FilenameChooser.Filename));
-		    		outputStream.WriteLine(("Analisys Date:").PadRight(25)+ Oggi.ToString("dd-MM-yyyy HH:mm:ss") );
-		    		outputStream.WriteLine("-----------------------------------------------------------------------------");
-			    	
-			    	string tmpItem1 = "";
-			    	string tmpItem2 = "";
-			    	// Video Stream
-			    	TreeIter tmpIter = new TreeIter();
-			    	bool isValidIter = VideoTreeView.Model.GetIterFirst(out tmpIter);
-			    	
-			    	if (isValidIter == true)
-			    	{
-				    	tmpItem1 = Convert.ToString(VideoTreeView.Model.GetValue(tmpIter, 0));
-				    	Console.WriteLine(tmpItem1);
-						tmpItem2 = Convert.ToString(VideoTreeView.Model.GetValue(tmpIter, 1));
-						Console.WriteLine(tmpItem2);
-						outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
-						
-						while(VideoTreeView.Model.IterNext(ref tmpIter)) 
-						{
-			  				tmpItem1 = (string) VideoTreeView.Model.GetValue(tmpIter,0);
-			  				tmpItem2 = (string) VideoTreeView.Model.GetValue(tmpIter,1);
-							outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
-						}
-			    		
-			    		outputStream.WriteLine("");
-			    	}
-		    		
-		    		// Audio Stream
-		    		isValidIter = AudioTreeView.Model.GetIterFirst(out tmpIter);
-		    		if (isValidIter == true)
-			    	{
-				    	tmpItem1 = (string) AudioTreeView.Model.GetValue(tmpIter,0);
-			  			tmpItem2 = (string) AudioTreeView.Model.GetValue(tmpIter,1);
-			  			outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
-		
-						while(AudioTreeView.Model.IterNext(ref tmpIter)) 
-						{
-			  				tmpItem1 = (string) AudioTreeView.Model.GetValue(tmpIter,0);
-			  				tmpItem2 = (string) AudioTreeView.Model.GetValue(tmpIter,1);
-			  				outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
-						}
-			  			
-			  			outputStream.WriteLine(""); outputStream.WriteLine(""); outputStream.WriteLine("");
-					}
-		  			outputStream.WriteLine("Report generated by themonospot v" + releaseBASE + " --- Gtk# Gui v" + releaseGUI);
-					outputStream.WriteLine("project web site: http://www.integrazioneweb.com/themonospot");
-		  			
-		    		outputStream.Close();
-		    		outputStream.Dispose();
-				}
-	
+					SaveReport(FileBox.Filename);
 				
 				FileBox.Destroy();
 				FileBox.Dispose();
 				return;
 			
 			}
+		}
+		
+		
+		private void SaveReport(string ReportPath)
+		{			
+			// Save File
+			DateTime Oggi = DateTime.Now; 
+			StreamWriter outputStream = new StreamWriter(ReportPath , false);
+			outputStream.WriteLine(("File:").PadRight(25)+ Path.GetFileName(ReportPath));
+			outputStream.WriteLine(("Analisys Date:").PadRight(25)+ Oggi.ToString("dd-MM-yyyy HH:mm:ss") );
+			outputStream.WriteLine("-----------------------------------------------------------------------------");
+	    	
+	    	string tmpItem1 = "";
+	    	string tmpItem2 = "";
+	    	// Video Stream
+	    	TreeIter tmpIter = new TreeIter();
+	    	bool isValidIter = VideoTreeView.Model.GetIterFirst(out tmpIter);
+	    	
+	    	if (isValidIter == true)
+	    	{
+		    	tmpItem1 = Convert.ToString(VideoTreeView.Model.GetValue(tmpIter, 0));
+		    	Console.WriteLine(tmpItem1);
+				tmpItem2 = Convert.ToString(VideoTreeView.Model.GetValue(tmpIter, 1));
+				Console.WriteLine(tmpItem2);
+				outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
+				
+				while(VideoTreeView.Model.IterNext(ref tmpIter)) 
+				{
+	  				tmpItem1 = (string) VideoTreeView.Model.GetValue(tmpIter,0);
+	  				tmpItem2 = (string) VideoTreeView.Model.GetValue(tmpIter,1);
+					outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
+				}
+	    		
+	    		outputStream.WriteLine("");
+	    	}
+			
+			// Audio Stream
+			isValidIter = AudioTreeView.Model.GetIterFirst(out tmpIter);
+			if (isValidIter == true)
+	    	{
+		    	tmpItem1 = (string) AudioTreeView.Model.GetValue(tmpIter,0);
+	  			tmpItem2 = (string) AudioTreeView.Model.GetValue(tmpIter,1);
+	  			outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
+	
+				while(AudioTreeView.Model.IterNext(ref tmpIter)) 
+				{
+	  				tmpItem1 = (string) AudioTreeView.Model.GetValue(tmpIter,0);
+	  				tmpItem2 = (string) AudioTreeView.Model.GetValue(tmpIter,1);
+	  				outputStream.WriteLine(tmpItem1.PadRight(25)+ tmpItem2);
+				}
+	  			
+	  			outputStream.WriteLine(""); outputStream.WriteLine(""); outputStream.WriteLine("");
+			}
+			outputStream.WriteLine("Report generated by themonospot v" + releaseBASE + " --- Gtk# Gui v" + releaseGUI);
+			outputStream.WriteLine("project web site: http://www.integrazioneweb.com/themonospot");
+			
+			outputStream.Close();
+			outputStream.Dispose();
+			
 		}
 
 
